force-app/main/default/objects/Resource__c/fields/APIKey__c.field-meta.xml
<CustomField>
    <fullName>APIKey__c</fullName>
    <label>API Key</label>
    <length>40</length>
    <type>Text</type>
</CustomField>