force-app/main/default/objects/Resource__c/fields/AppID__c.field-meta.xml
<CustomField>
    <fullName>AppID__c</fullName>
    <label>App ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>