force-app/main/default/objects/Resource__c/fields/ContactEmail__c.field-meta.xml
<CustomField>
    <fullName>ContactEmail__c</fullName>
    <label>Contact Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>