force-app/main/default/objects/Resource__c/fields/RequestURL__c.field-meta.xml
<CustomField>
    <fullName>RequestURL__c</fullName>
    <formula>$Label.BaseURL  +  AppID__c + &apos;/&apos;</formula>
    <label>RequestURL</label>
    <type>Text</type>
</CustomField>